--- a/templates/adjective.xml
+++ b/templates/adjective.xml
@@ -1,4 +1,4 @@
-part of speech:Adjective
+part of speech:adjective
 {% if entry.declensionLabel %}declension:{{entry.declensionLabel}} {% else %} indeclinable {% endif %}
 {% if entry.irregularDegree %}{{entry.irregularDegree}}{% endif %}
 {% if entry.extras %}{{entry.extras}}{% endif %}
