--- a/templates/adjective.xml
+++ b/templates/adjective.xml
@@ -1,7 +1,7 @@
-part of speech:adjective
-{% if entry.declensionLabel %}declension:{{entry.declensionLabel}} {% else %} indeclinable {% endif %}
-{% if entry.irregularDegree %}{{entry.irregularDegree}}{% endif %}
-{% if entry.extras %}{{entry.extras}}{% endif %}
-{% if entry.case %}case:{{entry.case}}{% endif %}
-{% if entry.number %}number:{{entry.number}}{% endif %}
-{% if entry.gender %}gender:{{entry.gender}}{% endif %}
+part of speech:adjective {% if entry.declensionLabel %}
+declension:{{entry.declensionLabel}} {% else %}indeclinable{% endif %}{% if entry.irregularDegree %}
+{{entry.irregularDegree}}{% endif %}{% if entry.extras %}
+{{entry.extras}} {% endif %}{% if entry.case %}
+case:{{entry.case}}{% endif %}{% if entry.number %}
+number:{{entry.number}} {% endif %}{% if entry.gender %}
+gender:{{entry.gender}}{% endif %}
