--- a/templates/pronoun.xml
+++ b/templates/pronoun.xml
@@ -1,5 +1,5 @@
 part of speech: pronoun
-{% if entry.extras %}{{entry.extras}}{% endif %}
-{% if entry.case %}case:{{entry.case}}{% endif %}
-{% if entry.number %}number:{{entry.number}}{% endif %}
-{% if entry.gender %}gender:{{entry.gender}}{% endif %}
+{% if entry.extras %}{{entry.extras}} {% endif %}{% if entry.case %}
+case:{{entry.case}} {% endif %}{% if entry.number %}
+number:{{entry.number}} {% endif %}{% if entry.gender %}
+gender:{{entry.gender}} {% endif %}
