--- a/templates/packard.tei.xml
+++ b/templates/packard.tei.xml
@@ -9,10 +9,15 @@
    <title>Packard's Morphological Analysis Codes</title>
   </titleStmt>
   <publicationStmt>
-   <p>https://github.com/pierre-amadio/packard</p>
+   <publisher>CrossWire Bible Society</publisher>
+     <availability>
+       <p>Creative Commons: BY-SA 4.0</p>
+     </availability>
+     <date when="2021">2021</date>
   </publicationStmt>
   <sourceDesc>
-   <p>Based on description in  http://ccat.sas.upenn.edu/gopher/text/religion/biblical/lxxmorph/*Morph-Coding </p>
+   <p>Based on description from  http://ccat.sas.upenn.edu/gopher/text/religion/biblical/lxxmorph/*Morph-Coding </p>
+   <p>Build script: https://github.com/pierre-amadio/packard</p>
   </sourceDesc>
  </fileDesc>
 </teiHeader>
