--- a/templates/noun.xml
+++ b/templates/noun.xml
@@ -1,6 +1,6 @@
-part of speech:noun.{% if entry.declension %}
-declension:{{entry.declension}} {% endif %}{% if entry.extras %}
-{{entry.extras}} {% endif %}{% if entry.case %}
-case:{{entry.case}} {% endif %}{% if entry.number %}
-number:{{entry.number}} {% endif %}{% if entry.gender %}
-gender:{{entry.gender}} {% endif %}
+<lb/>part of speech:noun.{% if entry.declension %}
+<lb/>declension:{{entry.declension}} {% endif %}{% if entry.extras %}
+<lb/>{{entry.extras}} {% endif %}{% if entry.case %}
+<lb/>case:{{entry.case}} {% endif %}{% if entry.number %}
+<lb/>number:{{entry.number}} {% endif %}{% if entry.gender %}
+<lb/>gender:{{entry.gender}} {% endif %}
