--- a/templates/pronoun.xml
+++ b/templates/pronoun.xml
@@ -1,5 +1,5 @@
-part of speech: pronoun
-{% if entry.extras %}{{entry.extras}} {% endif %}{% if entry.case %}
-case:{{entry.case}} {% endif %}{% if entry.number %}
-number:{{entry.number}} {% endif %}{% if entry.gender %}
-gender:{{entry.gender}} {% endif %}
+<lb/>part of speech: pronoun
+<lb/>{% if entry.extras %}{{entry.extras}} {% endif %}{% if entry.case %}
+<lb/>case:{{entry.case}} {% endif %}{% if entry.number %}
+<lb/>number:{{entry.number}} {% endif %}{% if entry.gender %}
+<lb/>gender:{{entry.gender}} {% endif %}
