--- a/templates/misc.xml
+++ b/templates/misc.xml
@@ -1,5 +1,5 @@
-<lb/>part of speech: {{entry.wordType}}{% if entry.extras %}
+<lb/>Part of speech: {{entry.wordType}}{% if entry.extras %}
 <lb/>{{entry.extras}} {% endif %}{% if entry.case %}
-<lb/>case:{{entry.case}} {% endif %}{% if entry.number %}
-<lb/>number:{{entry.number}} {% endif %}{% if entry.gender %}
-<lb/>gender:{{entry.gender}} {% endif %}
+<lb/>Case:{{entry.case}} {% endif %}{% if entry.number %}
+<lb/>Number:{{entry.number}} {% endif %}{% if entry.gender %}
+<lb/>Gender:{{entry.gender}} {% endif %}
