--- a/templates/noun.xml
+++ b/templates/noun.xml
@@ -1,6 +1,6 @@
-<lb/>part of speech:noun.{% if entry.declension %}
-<lb/>declension:{{entry.declension}} {% endif %}{% if entry.extras %}
+<lb/>Part of speech:noun.{% if entry.declension %}
+<lb/>Declension:{{entry.declension}} {% endif %}{% if entry.extras %}
 <lb/>{{entry.extras}} {% endif %}{% if entry.case %}
-<lb/>case:{{entry.case}} {% endif %}{% if entry.number %}
-<lb/>number:{{entry.number}} {% endif %}{% if entry.gender %}
-<lb/>gender:{{entry.gender}} {% endif %}
+<lb/>Case:{{entry.case}} {% endif %}{% if entry.number %}
+<lb/>Number:{{entry.number}} {% endif %}{% if entry.gender %}
+<lb/>Gender:{{entry.gender}} {% endif %}
