--- a/templates/pronoun.xml
+++ b/templates/pronoun.xml
@@ -1,5 +1,5 @@
-<lb/>part of speech: pronoun
+<lb/>Part of speech: pronoun
 <lb/>{% if entry.extras %}{{entry.extras}} {% endif %}{% if entry.case %}
-<lb/>case:{{entry.case}} {% endif %}{% if entry.number %}
-<lb/>number:{{entry.number}} {% endif %}{% if entry.gender %}
-<lb/>gender:{{entry.gender}} {% endif %}
+<lb/>Case:{{entry.case}} {% endif %}{% if entry.number %}
+<lb/>Number:{{entry.number}} {% endif %}{% if entry.gender %}
+<lb/>Gender:{{entry.gender}} {% endif %}
