--- a/templates/verb.xml
+++ b/templates/verb.xml
@@ -1,12 +1,12 @@
-<lb/>part of speech:verb {% if entry.stem %}
-<lb/>stem:{{entry.stem}} {% endif %}{% if entry.augment %}
-<lb/>augment {% endif %}{% if entry.participle %}
-<lb/>participle {% endif %}{% if entry.tense %}
-<lb/>tense:{{entry.tense}} {% endif %}{% if entry.voice %}
-<lb/>voice:{{entry.voice}} {% endif %}{% if entry.mood %}
-<lb/>mood:{{entry.mood}} {% endif %}{% if entry.extras %}
+<lb/>Part of speech:verb {% if entry.stem %}
+<lb/>Stem:{{entry.stem}} {% endif %}{% if entry.augment %}
+<lb/>Augment {% endif %}{% if entry.participle %}
+<lb/>Participle {% endif %}{% if entry.tense %}
+<lb/>Tense:{{entry.tense}} {% endif %}{% if entry.voice %}
+<lb/>Voice:{{entry.voice}} {% endif %}{% if entry.mood %}
+<lb/>Mood:{{entry.mood}} {% endif %}{% if entry.extras %}
 <lb/>{{entry.extras}} {% endif %}{% if entry.case %}
-<lb/>case:{{entry.case}} {% endif %}{% if entry.person %}
-<lb/>person:{{entry.person}} {% endif %}{% if entry.number %}
-<lb/>number:{{entry.number}} {% endif %}{% if entry.gender %}
-<lb/>gender:{{entry.gender}} {% endif %}
+<lb/>Case:{{entry.case}} {% endif %}{% if entry.person %}
+<lb/>Person:{{entry.person}} {% endif %}{% if entry.number %}
+<lb/>Number:{{entry.number}} {% endif %}{% if entry.gender %}
+<lb/>Gender:{{entry.gender}} {% endif %}
