--- a/templates/misc.xml
+++ b/templates/misc.xml
@@ -2,4 +2,4 @@
 <lb/>{{entry.extras}} {% endif %}{% if entry.case %}
 <lb/><hi rend="italic">Case:</hi> {{entry.case}} {% endif %}{% if entry.number %}
 <lb/><hi rend="italic">Number:</hi> {{entry.number}} {% endif %}{% if entry.gender %}
-<lb/><hi rend="italic">CGender:</hi> {{entry.gender}} {% endif %}
+<lb/><hi rend="italic">Gender:</hi> {{entry.gender}} {% endif %}
